language/move-lang/tests/move_check/typing/module_call_visibility_script_invalid.exp
error[E04002]: requires script context
   ┌─ tests/move_check/typing/module_call_visibility_script_invalid.move:16:35
   │
 5 │     public(script) fun f_script() {}
   │     -------------- This function can only be called from a script context, i.e. a 'script' function or a 'public(script)' function
   ·
16 │     fun f_private_call_script() { X::f_script() }
   │                                   ^^^^^^^^^^^^^ Invalid call to '0x2::X::f_script'

error[E04002]: requires script context
   ┌─ tests/move_check/typing/module_call_visibility_script_invalid.move:17:49
   │
 5 │     public(script) fun f_script() {}
   │     -------------- This function can only be called from a script context, i.e. a 'script' function or a 'public(script)' function
   ·
17 │     public(friend) fun f_friend_call_script() { X::f_script() }
   │                                                 ^^^^^^^^^^^^^ Invalid call to '0x2::X::f_script'

error[E04002]: requires script context
   ┌─ tests/move_check/typing/module_call_visibility_script_invalid.move:18:41
   │
 5 │     public(script) fun f_script() {}
   │     -------------- This function can only be called from a script context, i.e. a 'script' function or a 'public(script)' function
   ·
18 │     public fun f_public_call_script() { X::f_script() }
   │                                         ^^^^^^^^^^^^^ Invalid call to '0x2::X::f_script'

error[E04002]: requires script context
   ┌─ tests/move_check/typing/module_call_visibility_script_invalid.move:22:40
   │
12 │     public(script) fun f_script_call_script() { X::f_script() }
   │     -------------- This function can only be called from a script context, i.e. a 'script' function or a 'public(script)' function
   ·
22 │     fun f_private_call_self_script() { f_script_call_script() }
   │                                        ^^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x2::M::f_script_call_script'

error[E04002]: requires script context
   ┌─ tests/move_check/typing/module_call_visibility_script_invalid.move:23:54
   │
12 │     public(script) fun f_script_call_script() { X::f_script() }
   │     -------------- This function can only be called from a script context, i.e. a 'script' function or a 'public(script)' function
   ·
23 │     public(friend) fun f_friend_call_self_script() { f_script_call_script() }
   │                                                      ^^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x2::M::f_script_call_script'

error[E04002]: requires script context
   ┌─ tests/move_check/typing/module_call_visibility_script_invalid.move:24:46
   │
12 │     public(script) fun f_script_call_script() { X::f_script() }
   │     -------------- This function can only be called from a script context, i.e. a 'script' function or a 'public(script)' function
   ·
24 │     public fun f_public_call_self_script() { f_script_call_script() }
   │                                              ^^^^^^^^^^^^^^^^^^^^^^ Invalid call to '0x2::M::f_script_call_script'

error[E04001]: restricted visibility
   ┌─ tests/move_check/typing/module_call_visibility_script_invalid.move:27:50
   │
 4 │     fun f_private() {}
   │         --------- This function is internal to its module. Only 'public', 'public(script)', and 'public(friend)' functions can be called outside of their module
   ·
27 │     public(script) fun f_script_call_private() { X::f_private() }
   │                                                  ^^^^^^^^^^^^^^ Invalid call to '0x2::X::f_private'

error[E04001]: restricted visibility
   ┌─ tests/move_check/typing/module_call_visibility_script_invalid.move:31:49
   │
 6 │     public(friend) fun f_friend() {}
   │     -------------- This function can only be called from a 'friend' of module '0x2::X'
   ·
31 │     public(script) fun f_script_call_friend() { X::f_friend() }
   │                                                 ^^^^^^^^^^^^^ Invalid call to '0x2::X::f_friend'

